# zellij-bar-theme-config

./: Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  deploy.sh  install-binary.sh  install-source.sh  install.sh
.github/workflows/: release.yml
.hermes/plans/: 2026-06-04_163000-two-tier-menu.md  2026-06-04_172000-swatch-columns.md  2026-06-04_172100-swatch-labels.md  2026-06-04_180000-fg-bg-toggle-audit.md  2026-06-04_181500-disabled-f-swatch.md  2026-06-04_183000-status-bar-palette-audit.md  2026-06-04_183500-multiplayer-colors.md  2026-06-04_184000-usability-rating.md  2026-06-04_184500-ux-10.md  2026-06-04_193000-color-picker-reposition.md  2026-06-04_193500-repositionable-picker.md  2026-06-04_200000-auto-picker-position.md  2026-06-04_203000-about-screen-ideas.md  2026-06-04_204500-about-screen-branding.md  2026-06-04_204800-zellit-branding.md  2026-06-04_210000-dracula-color-analysis.md  (+7 more)
src/: bundled_themes.rs  update.rs
src/theme/: mod.rs
zellij-tab-config/: Cargo.toml
zellij-tab-config/src/: main.rs  update.rs
zellij-tab-config/src/bundled_themes/: ayu-light.kdl  blade-runner.kdl  catppuccin-latte.kdl  catppuccin-macchiato.kdl  cyber-noir.kdl  dracula.kdl  everforest-light.kdl  flexoki-dark.kdl  gruber-darker.kdl  gruvbox-dark.kdl  iceberg-dark.kdl  iceberg-light.kdl  lucario.kdl  night-owl.kdl  nord.kdl  onedark.kdl  solarized-light.kdl  tokyo-night-dark.kdl  tokyo-night-storm.kdl
zellij-tab-config/src/config/: mod.rs
zellij-tab-config/src/theme/: mod.rs
zellij-tab-config/src/ui/: color_picker.rs  events.rs  mod.rs  render.rs  state.rs
(+28 files in other folders)
